# fleet-router

./: .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.claude/: settings.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
evals/: __init__.py  compare.py  runner.py
evals/fixtures/: code.jsonl  creative.jsonl  math.jsonl  reasoning.jsonl  summarize.jsonl
evals/fixtures/hard/: code_hard.jsonl  math_hard.jsonl  reasoning_mmlu.jsonl
evals/scorers/: __init__.py  base.py  code.py  math.py  multi_choice.py  text.py
fleet/: SKILL.md  __init__.py  bandit.py  classifier.py  cli.py  config.py  config.yaml  dispatcher.py  events.py  llm_classifier.py  proxy.py  registry.py  retrieval.py  router.py  synthesizer.py
fleet/providers/: __init__.py  base.py  ollama.py  pool.py
fleet/verifiers/: __init__.py  base.py  code.py  heuristic.py  judge.py  math.py  registry.py  synthesizer.py
scripts/: fleet-ensure-proxy.py
tests/: test_bandit.py  test_classifier.py  test_cli.py  test_config.py  test_dispatcher.py  test_events.py  test_integration.py  test_llm_classifier.py  test_proxy.py  test_registry.py  test_retrieval.py  test_router.py  test_router_bandit.py  test_router_verifier.py  test_synthesizer.py
tests/evals/: test_compare.py  test_multi_choice.py  test_runner.py  test_runner_scorer_override.py
tests/providers/: test_ollama.py  test_pool.py
tests/verifiers/: test_base.py  test_code.py  test_heuristic.py  test_judge.py  test_math.py  test_registry.py  test_synthesizer.py
