[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fleet-router"
version = "0.1.0"
description = "Adaptive parallel LLM router for Ollama cloud models"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.9",
    "requests>=2.31",
    "pyyaml>=6.0",
    "sentence-transformers>=2.5",
    "numpy>=1.26",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
fleet = "fleet.cli:main"

[tool.setuptools.packages.find]
include = ["fleet*", "evals*"]
